[package]
name = "lecar"
version = "0.1.0"
authors = ["Paul Reesman <paul.r.reesman@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
rocket = "0.4.6"
rocket_contrib = "0.4.6"
serde = {version = "1.0.118", features = ["derive"]}
serde_bytes = "0.11.5"
