[package]
name = "lecar"
version = "0.1.0"
authors = ["Paul Reesman <paul.r.reesman@gmail.com>"]
repository = "https://github.com/reesmanp/lecar"
readme = "README.md"
edition = "2018"
license = "MIT"
keywords = ["cache", "cache replacement"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
rocket = {version = "0.4.6", optional = true}
rocket_contrib = {version = "0.4.6", optional = true}
serde = {version = "1.0.118", features = ["derive"], optional = true}
serde_bytes = {version = "0.11.5", optional = true}

[features]
web = ["rocket", "rocket_contrib", "serde", "serde_bytes"]

[lib]
name = "lecar"
path = "src/lib.rs"

[[bin]]
name = "lecar-web"
path = "src/bin.rs"
required-features = ["web"]
