[package]
name = "lecar"
version = "0.1.0"
authors = ["Paul Reesman <paul.r.reesman@gmail.com>"]
repository = "https://github.com/reesmanp/lecar"
readme = "README.md"
edition = "2018"
license = "MIT"
keywords = ["cache", "cache replacement"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = {version = "0.8.5", features = ["std_rng"] }
serde = {version = "1.0", features = ["derive"]  }
serde_json = "1.0"
serde_bytes = "0.11.5"
serde_millis = "0.1.1"
indexmap = {version = "1.8.2", features = ["serde-1"]}
get-size = { version = "^0.1", features = ["derive"] }

[lib]
name = "lecar"
path = "src/lib.rs"
